Fixed the issue Update button was enabled even though user did not updated username or password still update button was sending verification code email,now i disabled it untill user updates something